--- a/Frontend/src/MyComponents/Card.css
+++ b/Frontend/src/MyComponents/Card.css
@@ -18,24 +18,24 @@ Variables
 
 :root {
     
-    font-size: 15px;
+    /* font-size: 15px; */
     
     /* Primary */
-    --var-soft-blue: hsl(215, 51%, 70%);
-    --var-cyan: hsl(178, 100%, 50%);
+    /* --var-soft-blue: hsl(215, 51%, 70%);
+    --var-cyan: hsl(178, 100%, 50%); */
     /* Neutral */
-    --var-main-darkest: hsl(217, 54%, 11%);
+    /* --var-main-darkest: hsl(217, 54%, 11%);
     --var-card-dark: hsl(215, 81%, 45%);
     --var-line-dark: hsl(215, 32%, 27%);
-    --var-lightest: white;
+    --var-lightest: white; */
     
     /* Fonts */
-    
+/*     
     --var-heading: normal normal 600 1.5em/1.6em 'Outfit', sans-serif;
     
     --var-small-heading: normal normal 400 1em/1em 'Outfit', sans-serif;
     
-    --var-para: normal normal 300 1em/1.55em 'Outfit', sans-serif;
+    --var-para: normal normal 300 1em/1.55em 'Outfit', sans-serif; */
 }
 
 /* 
@@ -54,7 +54,7 @@ html {
 }
 
 body {
-    background-color: var(--var-main-darkest);
+    background-color: rgb(13, 234, 149);
 }
 
 img {
