--- a/Frontend/src/MyComponents/Searchbar.css
+++ b/Frontend/src/MyComponents/Searchbar.css
@@ -4,49 +4,49 @@ body,html{
     width: 100%;
     margin: 0;
     padding: 0;
-    background: #e74c3c !important;
     }
 
-    .searchbar{
-    margin-bottom: auto;
-    margin-top: auto;
-    height: 60px;
-    background-color: #353b48;
-    border-radius: 30px;
-    padding: 10px;
-    }
-
-    .search_input{
-    color: white;
-    border: 0;
-    outline: 0;
-    background: none;
-    width: 0;
-    caret-color:transparent;
-    line-height: 40px;
-    transition: width 0.4s linear;
-    }
-
-    .searchbar:hover > .search_input{
-    padding: 0 10px;
-    width: 450px;
-    caret-color:red;
-    transition: width 0.4s linear;
-    }
-
-    .searchbar:hover > .search_icon{
-    background: white;
-    color: #e74c3c;
-    }
-
-    .search_icon{
-    height: 40px;
-    width: 40px;
-    float: right;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    color:white;
-    text-decoration:none;
-    }
+    .searchbar {
+        margin-bottom: auto;
+        margin-top: auto;
+        height: 60px;
+        background-color: #353b48;
+        border-radius: 30px;
+        padding: 10px;
+        display: flex; /* Add this line */
+      }
+      
+      .search_input {
+        color: white;
+        border: 0;
+        outline: 0;
+        background: none;
+        width: 400px; /* Change this width to the desired width */
+        caret-color: transparent;
+        line-height: 40px;
+      }
+      
+      .searchbar:hover > .search_input {
+        padding: 0 10px;
+        width: 550px;
+        caret-color: white;
+        transition: width 0.1s linear;
+      }
+      
+      .searchbar:hover > .search_icon {
+        background: white;
+        color: black;
+      }
+      
+      .search_icon {
+        height: 40px;
+        width: 40px;
+        float: right;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        color: black;
+        text-decoration: none;
+      }
+      
