--- a/Frontend/src/MyComponents/Searchbar.css
+++ b/Frontend/src/MyComponents/Searchbar.css
@@ -1,31 +1,32 @@
 
-body,html{
+ body,html{
     height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
-    }
+    } 
 
-    .searchbar {
+     .searchbar {
         margin-bottom: auto;
         margin-top: auto;
         height: 60px;
         background-color: #353b48;
         border-radius: 30px;
         padding: 10px;
-        display: flex; /* Add this line */
-      }
+        display: flex;  
+       } 
       
-      .search_input {
+       .search_input {
         color: white;
         border: 0;
         outline: 0;
         background: none;
-        width: 400px; /* Change this width to the desired width */
+        width: 400px; 
         caret-color: transparent;
         line-height: 40px;
-      }
-      
+        transition: width 0.1s linear;
+      }  
+     
       .searchbar:hover > .search_input {
         padding: 0 10px;
         width: 550px;
@@ -36,8 +37,8 @@ body,html{
       .searchbar:hover > .search_icon {
         background: white;
         color: black;
-      }
-      
+      } 
+     
       .search_icon {
         height: 40px;
         width: 40px;
@@ -48,5 +49,5 @@ body,html{
         border-radius: 50%;
         color: black;
         text-decoration: none;
-      }
+      } 
       
