--- a/Frontend/src/MyComponents/loading.css
+++ b/Frontend/src/MyComponents/loading.css
@@ -1,23 +1,22 @@
 
-/* :root {
-	--hue: 223;
+ :root {
+	 --hue: 223;
 	--bg: hsl(var(--hue),10%,90%);
 	--fg: hsl(var(--hue),10%,10%);
 	--primary: hsl(var(--hue),90%,55%);
-	--trans-dur: 0.3s;
-	font-size: calc(16px + (20 - 16) * (100vw - 320px) / (1280 - 320));
+	--trans-dur: 0.3s; 
+	
 }
 body {
 	background-color: var(--bg);
 	color: var(--fg);
-	font: 1em/1.5 "DM Sans", sans-serif;
+
 	height: 100vh;
-	display: grid;
 	place-items: center;
 	transition:
 		background-color var(--trans-dur),
 		color var(--trans-dur);
-} */
+} 
 .preloader {
 	text-align: center;
 	max-width: 20em;
