--- a/Frontend/src/MyComponents/Card.css
+++ b/Frontend/src/MyComponents/Card.css
@@ -123,10 +123,21 @@ div.flex-row {
     align-items: center;
 }
 
-div.coin-base, .time-left, .card-attribute {
+.card-attribute {
     display: flex;
     align-items: center;
     padding: 1em 0;
+}
+.time-left{
+    /* display: flex;
+    align-items: center; */
+    padding-top: 1em;
+}
+
+.coin-base{
+    /* display: flex;
+    align-items: center; */
+    padding-top: 1em;
 }
 
 .card-attribute {
@@ -214,6 +225,12 @@ div.attribution {
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
+    transition: all 0.2s ease ;
+ 
+  }
+  .card-container:hover {
+    outline:  solid white;
+    transform: scale(1.1);
   }
   
   .card-link {
@@ -248,7 +265,7 @@ div.attribution {
   .card-price {
     font-size: 18px;
     font-weight: bold;
-    color: #d3dfec;
+    color: white;
     margin-bottom: 8px;
   }
   
@@ -256,7 +273,7 @@ div.attribution {
     font-size: 16px;
     line-height: 1.4;
     margin-bottom: 0;
-    color:rgb(241, 247, 247);
+    color:white;
   }
 
 @media (min-width:600px) {
@@ -264,3 +281,51 @@ div.attribution {
         font-size: 18px;
     }
 }
+.view_button{
+    cursor:pointer;
+    color:white;
+      position:relative;
+      padding:10px 25px;
+      background:rgba(0, 0, 0, 0.307);
+      font-size:16px;
+      
+      transition:all 0.1s;
+      &:after,&:before{
+        content:" ";
+        width:10px;
+        height:10px;
+        position:absolute;
+        border :0px solid #fff;
+        transition:all 0.5s;
+        }
+      &:after{
+        top:-1px;
+        left:-1px;
+        border-top:3px solid white;
+        border-left:3px solid white;
+      }
+      &:before{
+        bottom:-1px;
+        right:-1px;
+        border-bottom:3px solid white;
+        border-right:3px solid white;
+      }
+      &:hover{
+        border-top-right-radius:0px;
+      border-bottom-left-radius:0px;
+       
+        &:before,&:after{
+          
+          width:100%;
+          height:100%;
+          
+        }
+      }
+    }
+    
+    .view_button-container{
+      background:#black;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+    }
